common/k8s-manifests/dice-roller-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-roller
  labels:
    'backstage.io/kubernetes-id': dice-roller
spec:
  selector:
    matchLabels:
      app: dice-roller
  replicas: 10
  template:
    metadata:
      labels:
        app: dice-roller
        'backstage.io/kubernetes-id': dice-roller
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          args:
            - bash
            - -c
            - yes > /dev/null & yes > /dev/null & yes > /dev/null
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '50m'
          ports:
            - containerPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-roller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    'backstage.io/kubernetes-id': dice-roller
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dice-roller
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dice-roller
  labels:
    'backstage.io/kubernetes-id': dice-roller
spec:
  selector:
    app: dice-roller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
      name: port1
    - protocol: TCP
      port: 81
      targetPort: 9377
      name: port2
